refactor: Visualization clean-up [DHIS2-13618] (#14650)
* refactor: Visualization clean-up [DHIS2-13618]

* fix: Code formatting [DHIS2-13618]